# mem-rag

./: Dockerfile  README.md  pyproject.toml
app/: run.py
notebooks/: exploratory_analysis.ipynb
notebooks/vectordb/chroma/: chroma.sqlite3
vectordb/chroma/: chroma.sqlite3
