[tool.poetry]
name = "mem-rag"
version = "0.1.0"
description = "Building external memory through context for LLM"
authors = ["Krupique <krupique@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pypdf = "^5.2.0"
chromadb = "^0.6.3"
urllib3 = "^2.3.0"
accelerate = "^1.3.0"
sentence-transformers = "^3.4.1"
langchain = "^0.3.17"
transformers = "^4.48.2"
torch = { version = "^2.5.0", source = "pytorch" }
torchvision = {version = "^0.21.0+cu118", source = "pytorch"}
torchaudio = {version = "^2.6.0+cu118", source = "pytorch"}
ipykernel = "^6.29.5"
langchain-community = "^0.3.16"
langchain-huggingface = "^0.1.2"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
